--- a/index.html
+++ b/index.html
@@ -28,13 +28,6 @@
         <div class="right">
           <button type="button" id="clear-me">Clear storage</button>
         </div>
-  
-        <ul id="nav-mobile" class="sidenav">
-          <li><a href="#">Navbar Link MOBILE</a></li>
-          <li><a href="#">Navbar Link2 MOBILE</a></li>
-          <li><a href="#">Navbar Link3 MOBILE</a></li>
-        </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       </div>
     </nav>
     
@@ -72,10 +65,7 @@
       </div>
 
       <!-- 5DAY AND STORED CITIES -->
-          <div class="row" id="stored-and-5day">
-
-
-          </div>
+          <div class="row" id="stored-and-5day"></div>
     </div>
   
     <!--  Scripts-->
