--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                   <h6 id="wind-speed">Wind-speed</h6>
                 </div>
               </div>
+              <h3 id="five-day-text"></h3>
             </div>
           <div class="col m2">
             
@@ -65,7 +66,7 @@
       </div>
 
       <!-- 5DAY AND STORED CITIES -->
-          <div class="row" id="stored-and-5day"></div>
+      <div class="row" id="stored-and-5day"></div>
     </div>
   
     <!--  Scripts-->
